# podmind

./: .gitignore  Makefile  README.md  podmind-brief.md  pyproject.toml
docs/: architecture.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/scripts/: dev-ports.sh
frontend/src/: App.tsx  fixtures.ts  index.css  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ChatPanel.tsx  DependencyGraph.tsx  PodList.tsx  Skeleton.tsx  TimeSeriesChart.tsx
frontend/src/lib/: pods.ts
infra/coordinator/: deployment.yaml  service.yaml
infra/cpu-agent/: deployment.yaml  namespace.yaml  service.yaml
infra/guest-sim/: README.md  configmap.yaml  deployment.yaml  kustomization.yaml
infra/ingestor/: deployment.yaml  pvc.yaml  service.yaml
infra/redis/: deployment.yaml  service.yaml
infra/smarthostel/: 00-namespaces.yaml  kustomization.yaml
infra/smarthostel/auth/: deployment.yaml  pvc.yaml  service.yaml
infra/smarthostel/billing/: deployment.yaml  pvc.yaml  service.yaml
infra/smarthostel/booking/: deployment.yaml  pvc.yaml  service.yaml
infra/smarthostel/energy-meter/: deployment.yaml  pvc.yaml  service.yaml
infra/smarthostel/gateway/: deployment.yaml  pvc.yaml  service.yaml
infra/smarthostel/hvac-controller/: deployment.yaml  pvc.yaml  service.yaml
infra/smarthostel/lock-controller/: deployment.yaml  pvc.yaml  service.yaml
infra/smarthostel/notifications/: deployment.yaml  (+2 more)
scripts/: dev-up.sh
services/contracts/: README.md  pyproject.toml
services/contracts/podmind_contracts/: __init__.py  findings.py  flows.py  metrics.py  tools.py
services/contracts/tests/: test_roundtrip.py
services/coordinator/: Dockerfile  pyproject.toml
services/coordinator/app/: config.py  findings_cache.py  llm.py  main.py  orchestrator.py  tools.py
services/coordinator/tests/: test_llm.py  test_main.py  test_orchestrator.py  test_tools.py
services/cpu-agent/: Dockerfile  pyproject.toml
services/cpu-agent/app/: config.py  detector.py  main.py  poller.py  publisher.py  window.py
services/cpu-agent/tests/: test_detector.py  test_poller.py  test_publisher.py  test_window.py
services/ingestor/: Dockerfile  README.md  pyproject.toml
services/ingestor/_proto/: README.md  observer.proto
services/ingestor/app/: buffer.py  config.py  hubble.py  main.py  prometheus.py
services/ingestor/app/_proto/: __init__.py  observer_pb2.py  observer_pb2_grpc.py
services/ingestor/tests/: test_buffer.py  test_main.py  test_prometheus.py
(+6 files in other folders)
