[project]
name = "podmind-contracts"
version = "0.1.0"
description = "Shared Pydantic models for PodMind. No I/O, no side effects."
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["podmind_contracts"]
