[project]
name = "podmind-cpu-agent"
version = "0.1.0"
description = "Per-pod CPU anomaly detection; publishes Findings to Redis."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "redis>=5.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pydantic>=2.6",
    "podmind-contracts",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.uv.sources]
podmind-contracts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
